parser/y.output

state 0
	$accept: .program $end 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	program  goto 1
	stmtlist  goto 2
	stmt  goto 3
	expr  goto 4
	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	bitwise_expr  goto 6
	compare_expr  goto 7
	condition_expr  goto 5
	additive_expr  goto 8
	mult_expr  goto 9
	power_expr  goto 10
	special_expr  goto 11
	unary_expr  goto 19

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  stmtlist.    (1)
	stmtlist:  stmtlist.SEMICOLON stmt 

	SEMICOLON  shift 26
	.  reduce 1 (src line 47)


state 3
	stmtlist:  stmt.    (2)

	.  reduce 2 (src line 67)


state 4
	stmt:  expr.    (4)
	condition_expr:  expr.QUESTION expr COLON expr 

	QUESTION  shift 27
	.  reduce 4 (src line 77)


state 5
	expr:  condition_expr.    (5)

	.  reduce 5 (src line 83)


state 6
	condition_expr:  bitwise_expr.    (6)
	bitwise_expr:  bitwise_expr.BITAND compare_expr 
	bitwise_expr:  bitwise_expr.BITOR compare_expr 

	BITAND  shift 28
	BITOR  shift 29
	.  reduce 6 (src line 89)


state 7
	bitwise_expr:  compare_expr.    (8)
	compare_expr:  compare_expr.GT additive_expr 
	compare_expr:  compare_expr.LT additive_expr 

	GT  shift 30
	LT  shift 31
	.  reduce 8 (src line 99)


state 8
	compare_expr:  additive_expr.    (11)
	additive_expr:  additive_expr.ADD mult_expr 
	additive_expr:  additive_expr.SUB mult_expr 

	ADD  shift 32
	SUB  shift 33
	.  reduce 11 (src line 113)


state 9
	additive_expr:  mult_expr.    (14)
	mult_expr:  mult_expr.MUL power_expr 
	mult_expr:  mult_expr.DIV power_expr 
	mult_expr:  mult_expr.MOD power_expr 

	MUL  shift 34
	DIV  shift 35
	MOD  shift 36
	.  reduce 14 (src line 127)


state 10
	mult_expr:  power_expr.    (17)
	power_expr:  power_expr.CIRCUMFLEX special_expr 

	CIRCUMFLEX  shift 37
	.  reduce 17 (src line 141)


state 11
	power_expr:  special_expr.    (21)
	special_expr:  special_expr.MAX term 
	special_expr:  special_expr.MIN term 

	MAX  shift 38
	MIN  shift 39
	.  reduce 21 (src line 159)


state 12
	special_expr:  term.    (23)
	term:  term.KH factor 
	term:  term.KL factor 

	KL  shift 41
	KH  shift 40
	.  reduce 23 (src line 169)


state 13
	term:  dice_expr.    (26)
	dice_expr:  dice_expr.D factor 

	D  shift 42
	.  reduce 26 (src line 183)


state 14
	term:  fate_expr.    (27)

	.  reduce 27 (src line 187)


state 15
	term:  bonus_expr.    (28)

	.  reduce 28 (src line 191)


state 16
	term:  infinite_pool_expr.    (29)

	.  reduce 29 (src line 195)


state 17
	term:  double_cross_expr.    (30)

	.  reduce 30 (src line 199)


state 18
	term:  high_low_expr.    (31)

	.  reduce 31 (src line 203)


state 19
	term:  unary_expr.    (32)

	.  reduce 32 (src line 207)


20: shift/reduce conflict (shift 51(6), red'n 58(0)) on KL
20: shift/reduce conflict (shift 50(6), red'n 58(0)) on KH
state 20
	dice_expr:  factor.D factor 
	dice_expr:  factor.D factor A factor 
	dice_expr:  factor.D factor K factor 
	dice_expr:  factor.D factor Q factor 
	dice_expr:  factor.D factor P factor 
	dice_expr:  factor.D factor B factor 
	fate_expr:  factor.F 
	fate_expr:  factor.IDENT 
	bonus_expr:  factor.P factor 
	bonus_expr:  factor.B factor 
	infinite_pool_expr:  factor.A factor 
	infinite_pool_expr:  factor.A factor K factor 
	infinite_pool_expr:  factor.A factor K factor M factor 
	infinite_pool_expr:  factor.A factor Q factor 
	infinite_pool_expr:  factor.A factor Q factor M factor 
	infinite_pool_expr:  factor.A factor K factor Q factor 
	infinite_pool_expr:  factor.A factor K factor Q factor M factor 
	infinite_pool_expr:  factor.A factor M factor 
	double_cross_expr:  factor.C factor 
	double_cross_expr:  factor.C factor M factor 
	high_low_expr:  factor.KH factor 
	high_low_expr:  factor.KL factor 
	unary_expr:  factor.    (58)

	IDENT  shift 45
	D  shift 43
	F  shift 44
	A  shift 48
	C  shift 49
	P  shift 46
	B  shift 47
	KL  shift 51
	KH  shift 50
	.  reduce 58 (src line 398)


state 21
	factor:  NUMBER.    (59)

	.  reduce 59 (src line 404)


state 22
	factor:  IDENT.    (60)

	.  reduce 60 (src line 408)


state 23
	factor:  LPAREN.expr RPAREN 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	expr  goto 52
	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	bitwise_expr  goto 6
	compare_expr  goto 7
	condition_expr  goto 5
	additive_expr  goto 8
	mult_expr  goto 9
	power_expr  goto 10
	special_expr  goto 11
	unary_expr  goto 19

state 24
	factor:  array_expr.    (62)

	.  reduce 62 (src line 416)


state 25
	array_expr:  LBRACKET.array_items RBRACKET 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	expr  goto 55
	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	array_item  goto 54
	array_items  goto 53
	high_low_expr  goto 18
	bitwise_expr  goto 6
	compare_expr  goto 7
	condition_expr  goto 5
	additive_expr  goto 8
	mult_expr  goto 9
	power_expr  goto 10
	special_expr  goto 11
	unary_expr  goto 19

state 26
	stmtlist:  stmtlist SEMICOLON.stmt 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	stmt  goto 56
	expr  goto 4
	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	bitwise_expr  goto 6
	compare_expr  goto 7
	condition_expr  goto 5
	additive_expr  goto 8
	mult_expr  goto 9
	power_expr  goto 10
	special_expr  goto 11
	unary_expr  goto 19

state 27
	condition_expr:  expr QUESTION.expr COLON expr 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	expr  goto 57
	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	bitwise_expr  goto 6
	compare_expr  goto 7
	condition_expr  goto 5
	additive_expr  goto 8
	mult_expr  goto 9
	power_expr  goto 10
	special_expr  goto 11
	unary_expr  goto 19

state 28
	bitwise_expr:  bitwise_expr BITAND.compare_expr 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	compare_expr  goto 58
	additive_expr  goto 8
	mult_expr  goto 9
	power_expr  goto 10
	special_expr  goto 11
	unary_expr  goto 19

state 29
	bitwise_expr:  bitwise_expr BITOR.compare_expr 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	compare_expr  goto 59
	additive_expr  goto 8
	mult_expr  goto 9
	power_expr  goto 10
	special_expr  goto 11
	unary_expr  goto 19

state 30
	compare_expr:  compare_expr GT.additive_expr 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	additive_expr  goto 60
	mult_expr  goto 9
	power_expr  goto 10
	special_expr  goto 11
	unary_expr  goto 19

state 31
	compare_expr:  compare_expr LT.additive_expr 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	additive_expr  goto 61
	mult_expr  goto 9
	power_expr  goto 10
	special_expr  goto 11
	unary_expr  goto 19

state 32
	additive_expr:  additive_expr ADD.mult_expr 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	mult_expr  goto 62
	power_expr  goto 10
	special_expr  goto 11
	unary_expr  goto 19

state 33
	additive_expr:  additive_expr SUB.mult_expr 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	mult_expr  goto 63
	power_expr  goto 10
	special_expr  goto 11
	unary_expr  goto 19

state 34
	mult_expr:  mult_expr MUL.power_expr 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	power_expr  goto 64
	special_expr  goto 11
	unary_expr  goto 19

state 35
	mult_expr:  mult_expr DIV.power_expr 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	power_expr  goto 65
	special_expr  goto 11
	unary_expr  goto 19

state 36
	mult_expr:  mult_expr MOD.power_expr 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	power_expr  goto 66
	special_expr  goto 11
	unary_expr  goto 19

state 37
	power_expr:  power_expr CIRCUMFLEX.special_expr 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	special_expr  goto 67
	unary_expr  goto 19

state 38
	special_expr:  special_expr MAX.term 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	term  goto 68
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	unary_expr  goto 19

state 39
	special_expr:  special_expr MIN.term 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	term  goto 69
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	high_low_expr  goto 18
	unary_expr  goto 19

state 40
	term:  term KH.factor 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	factor  goto 70
	array_expr  goto 24

state 41
	term:  term KL.factor 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	factor  goto 71
	array_expr  goto 24

state 42
	dice_expr:  dice_expr D.factor 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	factor  goto 72
	array_expr  goto 24

state 43
	dice_expr:  factor D.factor 
	dice_expr:  factor D.factor A factor 
	dice_expr:  factor D.factor K factor 
	dice_expr:  factor D.factor Q factor 
	dice_expr:  factor D.factor P factor 
	dice_expr:  factor D.factor B factor 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	factor  goto 73
	array_expr  goto 24

state 44
	fate_expr:  factor F.    (42)

	.  reduce 42 (src line 253)


state 45
	fate_expr:  factor IDENT.    (43)

	.  reduce 43 (src line 257)


state 46
	bonus_expr:  factor P.factor 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	factor  goto 74
	array_expr  goto 24

state 47
	bonus_expr:  factor B.factor 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	factor  goto 75
	array_expr  goto 24

state 48
	infinite_pool_expr:  factor A.factor 
	infinite_pool_expr:  factor A.factor K factor 
	infinite_pool_expr:  factor A.factor K factor M factor 
	infinite_pool_expr:  factor A.factor Q factor 
	infinite_pool_expr:  factor A.factor Q factor M factor 
	infinite_pool_expr:  factor A.factor K factor Q factor 
	infinite_pool_expr:  factor A.factor K factor Q factor M factor 
	infinite_pool_expr:  factor A.factor M factor 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	factor  goto 76
	array_expr  goto 24

state 49
	double_cross_expr:  factor C.factor 
	double_cross_expr:  factor C.factor M factor 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	factor  goto 77
	array_expr  goto 24

state 50
	high_low_expr:  factor KH.factor 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	factor  goto 78
	array_expr  goto 24

state 51
	high_low_expr:  factor KL.factor 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	factor  goto 79
	array_expr  goto 24

state 52
	condition_expr:  expr.QUESTION expr COLON expr 
	factor:  LPAREN expr.RPAREN 

	RPAREN  shift 80
	QUESTION  shift 27
	.  error


state 53
	array_expr:  LBRACKET array_items.RBRACKET 
	array_items:  array_items.COMMA array_item 

	RBRACKET  shift 81
	COMMA  shift 82
	.  error


state 54
	array_items:  array_item.    (64)

	.  reduce 64 (src line 432)


state 55
	condition_expr:  expr.QUESTION expr COLON expr 
	array_item:  expr.    (66)

	QUESTION  shift 27
	.  reduce 66 (src line 447)


state 56
	stmtlist:  stmtlist SEMICOLON stmt.    (3)

	.  reduce 3 (src line 71)


state 57
	condition_expr:  expr.QUESTION expr COLON expr 
	condition_expr:  expr QUESTION expr.COLON expr 

	QUESTION  shift 27
	COLON  shift 83
	.  error


state 58
	bitwise_expr:  bitwise_expr BITAND compare_expr.    (9)
	compare_expr:  compare_expr.GT additive_expr 
	compare_expr:  compare_expr.LT additive_expr 

	GT  shift 30
	LT  shift 31
	.  reduce 9 (src line 103)


state 59
	bitwise_expr:  bitwise_expr BITOR compare_expr.    (10)
	compare_expr:  compare_expr.GT additive_expr 
	compare_expr:  compare_expr.LT additive_expr 

	GT  shift 30
	LT  shift 31
	.  reduce 10 (src line 107)


state 60
	compare_expr:  compare_expr GT additive_expr.    (12)
	additive_expr:  additive_expr.ADD mult_expr 
	additive_expr:  additive_expr.SUB mult_expr 

	ADD  shift 32
	SUB  shift 33
	.  reduce 12 (src line 117)


state 61
	compare_expr:  compare_expr LT additive_expr.    (13)
	additive_expr:  additive_expr.ADD mult_expr 
	additive_expr:  additive_expr.SUB mult_expr 

	ADD  shift 32
	SUB  shift 33
	.  reduce 13 (src line 121)


state 62
	additive_expr:  additive_expr ADD mult_expr.    (15)
	mult_expr:  mult_expr.MUL power_expr 
	mult_expr:  mult_expr.DIV power_expr 
	mult_expr:  mult_expr.MOD power_expr 

	MUL  shift 34
	DIV  shift 35
	MOD  shift 36
	.  reduce 15 (src line 131)


state 63
	additive_expr:  additive_expr SUB mult_expr.    (16)
	mult_expr:  mult_expr.MUL power_expr 
	mult_expr:  mult_expr.DIV power_expr 
	mult_expr:  mult_expr.MOD power_expr 

	MUL  shift 34
	DIV  shift 35
	MOD  shift 36
	.  reduce 16 (src line 135)


state 64
	mult_expr:  mult_expr MUL power_expr.    (18)
	power_expr:  power_expr.CIRCUMFLEX special_expr 

	CIRCUMFLEX  shift 37
	.  reduce 18 (src line 145)


state 65
	mult_expr:  mult_expr DIV power_expr.    (19)
	power_expr:  power_expr.CIRCUMFLEX special_expr 

	CIRCUMFLEX  shift 37
	.  reduce 19 (src line 149)


state 66
	mult_expr:  mult_expr MOD power_expr.    (20)
	power_expr:  power_expr.CIRCUMFLEX special_expr 

	CIRCUMFLEX  shift 37
	.  reduce 20 (src line 153)


state 67
	power_expr:  power_expr CIRCUMFLEX special_expr.    (22)
	special_expr:  special_expr.MAX term 
	special_expr:  special_expr.MIN term 

	MAX  shift 38
	MIN  shift 39
	.  reduce 22 (src line 163)


state 68
	special_expr:  special_expr MAX term.    (24)
	term:  term.KH factor 
	term:  term.KL factor 

	KL  shift 41
	KH  shift 40
	.  reduce 24 (src line 173)


state 69
	special_expr:  special_expr MIN term.    (25)
	term:  term.KH factor 
	term:  term.KL factor 

	KL  shift 41
	KH  shift 40
	.  reduce 25 (src line 177)


state 70
	term:  term KH factor.    (33)

	.  reduce 33 (src line 211)


state 71
	term:  term KL factor.    (34)

	.  reduce 34 (src line 215)


state 72
	dice_expr:  dice_expr D factor.    (36)

	.  reduce 36 (src line 226)


state 73
	dice_expr:  factor D factor.    (35)
	dice_expr:  factor D factor.A factor 
	dice_expr:  factor D factor.K factor 
	dice_expr:  factor D factor.Q factor 
	dice_expr:  factor D factor.P factor 
	dice_expr:  factor D factor.B factor 

	A  shift 84
	P  shift 87
	B  shift 88
	K  shift 85
	Q  shift 86
	.  reduce 35 (src line 221)


state 74
	bonus_expr:  factor P factor.    (44)

	.  reduce 44 (src line 268)


state 75
	bonus_expr:  factor B factor.    (45)

	.  reduce 45 (src line 272)


state 76
	infinite_pool_expr:  factor A factor.    (46)
	infinite_pool_expr:  factor A factor.K factor 
	infinite_pool_expr:  factor A factor.K factor M factor 
	infinite_pool_expr:  factor A factor.Q factor 
	infinite_pool_expr:  factor A factor.Q factor M factor 
	infinite_pool_expr:  factor A factor.K factor Q factor 
	infinite_pool_expr:  factor A factor.K factor Q factor M factor 
	infinite_pool_expr:  factor A factor.M factor 

	K  shift 89
	Q  shift 90
	M  shift 91
	.  reduce 46 (src line 278)


state 77
	double_cross_expr:  factor C factor.    (54)
	double_cross_expr:  factor C factor.M factor 

	M  shift 92
	.  reduce 54 (src line 360)


state 78
	high_low_expr:  factor KH factor.    (56)

	.  reduce 56 (src line 378)


state 79
	high_low_expr:  factor KL factor.    (57)

	.  reduce 57 (src line 387)


state 80
	factor:  LPAREN expr RPAREN.    (61)

	.  reduce 61 (src line 412)


state 81
	array_expr:  LBRACKET array_items RBRACKET.    (63)

	.  reduce 63 (src line 422)


state 82
	array_items:  array_items COMMA.array_item 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error

	expr  goto 55
	term  goto 12
	factor  goto 20
	dice_expr  goto 13
	fate_expr  goto 14
	bonus_expr  goto 15
	infinite_pool_expr  goto 16
	double_cross_expr  goto 17
	array_expr  goto 24
	array_item  goto 93
	high_low_expr  goto 18
	bitwise_expr  goto 6
	compare_expr  goto 7
	condition_expr  goto 5
	additive_expr  goto 8
	mult_expr  goto 9
	power_expr  goto 10
	special_expr  goto 11
	unary_expr  goto 19

state 83
	condition_expr:  expr QUESTION expr COLON.expr 

	NUMBER  shift 21
	IDENT  shift 22
	LPAREN  shift 23
	LBRACKET  shift 25
	.  error
